@@ -14,15 +14,13 @@ EBUILD rspec-mocks-2.13.1.ebuild 1110 SHA256 1464a918bf91fb6904ea6d024ba52f1051c
 EBUILD rspec-mocks-2.14.6-r1.ebuild 1225 SHA256 2f2f7f697fb20b12856962949ce9becfdc9792a7d6c1a787c27052c7bfee71e6 SHA512 de172bd51e0bd110da27c617c6aecf95c2e74f63e55afb572d136bba636fe4464948d406b40f3d0ef3b991a85e9418f16061fe7cafb29b8f032c1fab311c86f3 WHIRLPOOL f4cd53d9a83dca019ab777a355c87bace03ba44b1b720bfe058ebcc08a76667d1d501d78c85133b194b3d3f494ea5af4c2f4d735cbf1531dd9c8bb1a12e1a974
 EBUILD rspec-mocks-2.14.6.ebuild 1217 SHA256 efadf0fa22e4a7f09cf64a82ed620164c7b0b69646a570dada5865253fb57f2c SHA512 6f157f364797a8bdc7ede083ae3cc6637896946f776aa8a4d585b57da087abd4dd5fadb10a6737c2cb20cf7b531a9f5c85ed40116c7b2074bdc74502c5d89bf0 WHIRLPOOL 19af92aa303bffe15dab5b1d2dd59207f0a462488fc5d996ea6652612c32008880acf53fa184254f063e1fb80dc42a2f25b089f14e52c9b219371c29051bd2ba
 EBUILD rspec-mocks-2.99.0.ebuild 1397 SHA256 ea7b772e15912e38538ce467a676c766343f0dca44d21eff1e4d55b797c13905 SHA512 8a60136e45ee5a5add7a9335532fac564a4710ead0d63c3b5eee9103a7c9e463a7b3487d0f45edd8697c2d075a0dcd45c3e1beaf1bd99d136b809ed873960ac8 WHIRLPOOL 245c81a1f85f220e07e3839176b282de9d0350f82fb09b1d0a2e4c8eec1174bfb264af94ae6aa06df5a5af2bd99a97f983f71edc910c6cd9e9e8762bff2feb89
-EBUILD rspec-mocks-2.99.1.ebuild 1388 SHA256 9cdff89ecf5129e9eb6ce767651bf15c0a1e8dfb3776a8317bc8ac1f877412f9 SHA512 c15b27a0891025c9045c1621374e565b930ec49e07b8eeba7ec1fd6bcf3150a199f7f0a1e193ec5988f877e0cd0982c5c0ae2681cadbc7fa681e3beef75ea153 WHIRLPOOL ca4baae9922817c72cefdd575d0cbbb9df30e723347e35986ffbc00693baa217cb6ed3db2e91e19b6587006ada6a864f6940be8bbcd90cd3f778ac98f9fce4fa
-MISC ChangeLog 10155 SHA256 bbe9f29ed0cdf44c0013985be7c3cfdcc9c769a7534556815e73701e57d0687e SHA512 18ca7d6425e275d6c07e36f78081ea620a0952776a5cbe05878ae0d61ce26419d4ce4d85ce67fa2fffdff1aba0b52eb188a08cafacecd7c75c7692cc01698a56 WHIRLPOOL d26650884080777adb9baed656bd43ab58ff8216620a6301c6e08b4df7cd8a855b59fa7e9d82131fade3bf4ae49b8423955aff07b2446398d5b1633ecb13d221
+EBUILD rspec-mocks-2.99.1.ebuild 1395 SHA256 29ad051944c3afd4d83288c64bf9014c56cd9468916da0c3ed62d437a13b9296 SHA512 5b0a5f0427366bdb87a8bfef803232dd949b78b5bfc8c5df3723fced510aeb57e02a734cead6a930ddfe3022daef6fca41f09e1123b06e61ef3894a20f8af69b WHIRLPOOL b465596a2379b8d22b7c9903c8f74e04b7723b4bc79e34a3207af78acc1a1e8306b4d21e7b1b5c165c6c0122c24858d4c8130a3faacc31586bbde5e21cf87fa9
+MISC ChangeLog 10276 SHA256 d9eae6bd10e9b4138e9099dc693df7659c21f267a1d0060ccffd2b562233e8ea SHA512 4a9ca57e9a00bd45ac9f3f5102f3b1457bece91801b274e220c1d693c500040d6f5572486a08995adc0777c293e0340303fe36fb65c67e996f254fab2923c787 WHIRLPOOL 52fe56b0b9352f686453f2f1ef3f0e42a2e031d62b56dfff126cc356e64c0f531aac5ebaa1bdf45594dfbefbd5e207198ed9722132b19d09ab3c1c04b4f7ad0f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iKYEAREIAGYFAlPOiipfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOh2pACePk3PJmj/oSFukhGOe3f9jjPb
-BmsAnA/MK3wera+dYKMDxWbrOD6pA5vH
-=EW7B
+iF4EAREIAAYFAlPcgJAACgkQiIP6VqMIqNfhzgD/ZLj+6Je86y39S0m98kjTe6H3
+HM+Ol5i1PTizDevpkb4A/jU1GWi+hH1aQUnsKpC1fXzjUuiCjJzdgzfWR6TwrHN3
+=62/5
 -----END PGP SIGNATURE-----
